--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="center_field">
             <div class="bottom_field">
-                <span id="labelhelp">Drag to re-roll</span>
+                <span id="labelhelp">Tap to re-roll</span>
             </div>
         </div>
     </div>
